syntax = "proto3";
package interchange;

message ControlFrame {
  int64 Red = 1;
  int64 Green = 2;
  int64 Blue = 3;
}

message ControlMessage {
  repeated ControlFrame Frames = 1;
}
