syntax = "proto3";
package interchange;

message WelcomeMessage {
  string DeviceId = 1;
}
